make title availability show in paragraph

--- a/fiddle/templates.html
+++ b/fiddle/templates.html
@@ -1,7 +1,7 @@
 <script id="blank" type="text/html"></script>
 
 <script id="formTemplate" type="text/html">
-    <span id="title_msg"></span>
+    <p id="title_msg"></p>
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
