--- a/login/done.html
+++ b/login/done.html
@@ -2,7 +2,7 @@
 <script language="javascript" type="text/javascript">
 <!--
 opener.viewModel.authenticated(true);
-if (typeof(opener.ownerId !== 'undefined') && opener.ownerId == {{ userId }}) {
+if (typeof(opener.ownerId !== 'undefined') && opener.ownerId == '{{ userId }}') {
     opener.viewModel.isOwner(true);
 }
 self.close();
