get search ID from each app

--- a/base_snippet.html
+++ b/base_snippet.html
@@ -40,7 +40,7 @@
         <script type="text/javascript"> 
           google.load('search', '1', {language : 'en'});
           google.setOnLoadCallback(function() {
-            var customSearchControl = new google.search.CustomSearchControl('001890374624298101749:vgz9z7-mrsu');
+            var customSearchControl = new google.search.CustomSearchControl('{{ searchid }}');
             customSearchControl.setResultSetSize(google.search.Search.SMALL_RESULTSET);
             customSearchControl.draw('cse');
           }, true);
