add context processor for displaying languages in navigation area

--- a/base_snippet.html
+++ b/base_snippet.html
@@ -5,7 +5,9 @@
 <ul id="nav-secondary">
     {% block secondary_nav %}
         <li><a href="{% url fiddle_top_authors %}">By author</a></li>
-        <li><a href="{% url fiddle_top_languages %}">By language</a></li>
+        {% if multiple_languages %}
+            <li><a href="{% url fiddle_top_languages %}">By language</a></li>
+        {% endif %}
         <li><a href="{% url fiddle_top_tags %}">By tag</a></li>
     {% endblock %}
 </ul>
