--- a/login/login.html
+++ b/login/login.html
@@ -10,16 +10,16 @@
 <div>
   <ul class="thumbs">
     <li>
-        <a rel="nofollow" href="{% url socialauth_begin 'twitter' %}"><img title="log in with Twitter" src="{% media_url %}/images/twitter_icon.png" /></a>
+        <a rel="nofollow" href="{% url socialauth_begin 'twitter' %}"><img title="log in with Twitter" src="{% media_url %}/images/twitter_icon.png?v=2" /></a>
     </li>
     <li>
-        <a rel="nofollow" href="{% url socialauth_begin 'google-oauth2' %}"><img title="log in with Google Oauth2" src="{% media_url %}/images/google_icon.png" /></a>
+        <a rel="nofollow" href="{% url socialauth_begin 'google-oauth2' %}"><img title="log in with Google Oauth2" src="{% media_url %}/images/google_icon.png?v=2" /></a>
     </li>
     <li>
-        <a rel="nofollow" href="{% url socialauth_begin 'facebook' %}"><img title="log in with Facebook" src="{% media_url %}/images/facebook_icon.png" /></a>
+        <a rel="nofollow" href="{% url socialauth_begin 'facebook' %}"><img title="log in with Facebook" src="{% media_url %}/images/facebook_icon.png?v=2" /></a>
     </li>
     <li>
-        <a rel="nofollow" href="{% url socialauth_begin 'google-oauth' %}"><img title="log in with Google Oauth" src="{% media_url %}/images/gmail_icon.png" /></a>
+        <a rel="nofollow" href="{% url socialauth_begin 'google-oauth' %}"><img title="log in with Google Oauth" src="{% media_url %}/images/gmail_icon.png?v=2" /></a>
     </li>
   </ul>
 </div>
