--- a/login/done.html
+++ b/login/done.html
@@ -1,8 +1,10 @@
-
 <script language="javascript" type="text/javascript">
-opener.viewModel.authenticated(true);
-if (typeof(opener.ownerId !== 'undefined') && opener.ownerId == '{{ userId }}') {
-    opener.viewModel.isOwner(true);
-}
-self.close();
+    try {
+        opener.viewModel.authenticated(true);
+        if (typeof(opener.ownerId !== 'undefined') && opener.ownerId == '{{ userId }}') {
+            opener.viewModel.isOwner(true);
+        }
+    } finally {
+        self.close();
+    }
 </script>
