--- a/login/login.html
+++ b/login/login.html
@@ -5,9 +5,7 @@
     {% if error %}
         An error occurred during authentication. Try another login service:
     {% else %}
-        Do you already have an account on one of these sites? Click the icon to
-
-        <i>log in</i> with it here:
+        Do you already have an account on one of these sites? Click the icon to <i>log in</i> with it here:
     {% endif %}
 </p>
 <div>
