--- a/fiddle/templates.html
+++ b/fiddle/templates.html
@@ -1,4 +1,5 @@
 <script id="blank" type="text/html"></script>
+{% load i18n %}
 
 <script id="formTemplate" type="text/html">
     <p id="titleMessage"><img data-bind="attr: { src: titleMessage.icon }" /><span data-bind="text: titleMessage.text"></span></p>
@@ -12,7 +13,7 @@
         icons: {
             primary: "ui-icon-triangle-1-e"
         },
-        label: newFiddle() ? "Save" : "Update"
+        label: newFiddle() ? "{% trans "Save" %}": "{% trans "Update" %}"
     } }, visible: isOwner' type="submit">
         </button>
     </form>
@@ -24,7 +25,7 @@
         <div data-bind="visible: revisionsMenu.revisions().length > 1">
             <select class="left" data-bind="options: revisionsMenu.revisions, value: revisionsMenu.selectedDiffRevision, optionsCaption: 'and compare with', visible: revisionsMenu.diffEnabled"></select>
             <div class="line-height">
-                <input id="enableDiff" type="checkbox" data-bind="checked: revisionsMenu.diffEnabled" /><label for="enableDiff">Compare revisions</label>
+                <input id="enableDiff" type="checkbox" data-bind="checked: revisionsMenu.diffEnabled" /><label for="enableDiff">{% trans "Compare revisions" %}</label>
             </div>
         </div>
     </div>
